--- a/gapminder/vignettes/use_country_geo.Rmd
+++ b/gapminder/vignettes/use_country_geo.Rmd
@@ -20,7 +20,7 @@ knitr::opts_chunk$set(
 ## Use country areas to compute population density
 
 ```{r}
-library(gapminder)
+library(gapminderplus)
 library(dplyr)
 
 gapminder %>%
